# tikzgif

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  COMPLEXITY_COMPARISON.md  CONTRIBUTING.md  DESIGN.md  EXAMPLES.md  LICENSE  Makefile  PYTHON_FILE_INTERACTIONS.md  README.md  README2.md  RESEARCH_REPORT.md  TODO.txt  USAGE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: article.md
examples/: 02_bouncing_ball.tex  03_sine_wave_phase.tex  04_lorenz_attractor.tex  06a_bubble_sort.tex  06b_selection_sort.tex  06c_insertion_sort.tex  07_mandelbrot_zoom.tex  08_step_response.tex  10_rc_circuit.tex  11_pendulum.tex  12_gear_train.tex  13_signal_convolution.tex  13a_signal_convolution.tex  13b_signal_convolution.tex  13c_signal_convolution.tex  13d_signal_convolution.tex  14_heat_equation.tex  15_fractal_tree.tex  16_antenna_radiation.tex  17_bode_plot.tex  18_block_diagram_gain_sweep.tex  19_electric_field_lines.tex  20_em_wave.tex  21_fourier_series.tex  22_function_family.tex  23_helmholtz_coils.tex  23_magnetic_field_loop.tex  24_parametric_curve.tex  25_phase_portrait.tex  26_pid_tuning.tex  26a_pid_kp_sweep.tex  26b_pid_ki_sweep.tex  26c_pid_kd_sweep.tex  27_root_locus.tex  28_rotation_3d.tex  29_step_response.tex  30_wave_interference.tex  31_four_bar_linkage.tex  32_cnn_forward_pass.tex  antenna_radiation.tex  (+4 more)
examples/computers/: 01_binary_counter.tex  02b_selection_sort.tex  02c_insertion_sort.tex
examples/controls/: 01_step_response.tex  02_bode_plot.tex  04_root_locus.tex
examples/electromagnetic/: 03_em_wave_3d.tex  05_antenna_radiation.tex
examples/geometry/: 01_rotating_square.tex  02_mandelbrot_zoom.tex  03_fractal_tree.tex
examples/math/: 06d_convolution_exp_step.tex  08_lorenz_attractor.tex
examples/mechanical/: 02_pendulum.tex  04_four_bar_linkage.tex
examples/signal_processing/: 03_convolution_2d.tex
templates/: minimal.tex  standalone.tex
tests/: __init__.py  conftest.py  test_api_validation.py  test_assembly.py  test_assembly_dispatch.py  test_backends.py  test_bbox.py  test_cache.py  test_cli.py  test_engine.py  test_frames.py  test_processing.py  test_template.py  test_template_system.py
tests/benchmarks/: __init__.py  benchmark_templates.py  test_benchmarks.py
tests/edge_cases/: __init__.py  test_edge_cases.py
tests/examples/: __init__.py  gallery.py  test_gallery.py
tests/examples/tex/: 01_rotating_square.tex  02_bouncing_ball.tex  03_sine_wave_phase.tex  04_lorenz_attractor.tex  05_binary_counter.tex  06_sorting_visualization.tex  07_mandelbrot_zoom.tex  08_step_response.tex  09_em_wave.tex  10_rc_circuit.tex  11_pendulum.tex  12_gear_train.tex  13_signal_convolution.tex  14_heat_equation.tex  15_fractal_tree.tex
tikzgif/: __init__.py  api.py  assembly.py  backends.py  bbox.py  cache.py  compiler.py  config.py  detection.py  engine.py  exceptions.py  frames.py  processing.py  template_registry.py  template_schema.py  tex_gen.py  types.py
tikzgif/assemble/: __init__.py  core.py
tikzgif/cache/: __init__.py  store.py
tikzgif/cli/: __init__.py  main.py  render_cli.py  templates_cli.py
tikzgif/compile/: __init__.py  engine.py  pipeline.py
tikzgif/rasterize/: __init__.py  backends.py
tikzgif/template/: __init__.py  parser.py
tikzgif/templates/: __init__.py
tikzgif/templates/base/: standalone.tex
tikzgif/templates/control_systems/: block_diagram_gain_sweep.tex  bode_plot.tex  pid_tuning.tex  root_locus.tex  step_response.tex
tikzgif/templates/electromagnetics/: antenna_radiation.tex  electric_field_lines.tex  em_wave.tex  magnetic_field_loop.tex  wave_interference.tex
tikzgif/templates/general_physics/: fourier_series.tex  function_family.tex  parametric_curve.tex  phase_portrait.tex  rotation_3d.tex
